# superteam-bot

./: .gitignore  README.md  compose.yml  flake.nix  knowledgebase.md  pyproject.toml  settings.json
app/: __init__.py  __main__.py  ai.py  config.py  keyboards.py  settings.py  utils.py
app/handlers/: __init__.py  common.py  faq.py  subscription.py
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/api/: tasks.py
backend/competitions/: admin.py  models.py  router.py  serializers.py  urls.py
backend/competitions/migrations/: 0001_initial.py  0002_competition_api_id.py
backend/events/: admin.py  models.py  router.py  serializers.py  signals.py  urls.py
backend/events/migrations/: 0001_initial.py  0002_event_api_id.py
backend/storage/: celery.py  settings.py
backend/storage/api/: signals.py  tasks.py
backend/storage/urls/: __init__.py  v0.py
backend/subscribes/: admin.py  models.py  router.py  serializers.py  urls.py
backend/subscribes/migrations/: 0001_initial.py
bot/: .env.template  Dockerfile  knowledgebase.md  pyproject.toml  settings.json
bot/app/: __init__.py  __main__.py  ai.py  ai_prompts.py  cache.py  config.py  keyboards.py  settings.py  utils.py  webhooks.py
bot/app/api/: __init__.py  challenge.py  event.py
bot/app/handlers/: __init__.py  challenges.py  common.py  events.py  faq.py  subscription.py
